[package]
name = "DB_Search"
version = "0.1.0"
edition = "2024"
license = "MIT"


[dependencies]
walkdir = "2.5"
regex = "1.10"
memmap2 = "0.9"
rayon = "1.10"
anyhow = "1.0"
eframe = "0.27"
egui = "0.27"
rfd = "0.12"
pangocairo = "0.20.10"
slint = "1.5"
unicode-bidi = "0.3"
arabic_reshaper = "0.4"


[profile.dev]
opt-level = 0
debug = true
